<resources>
    <string name="app_name">深临</string>
    <string name="tv_splash">深   临</string>
    <string name="et_login_username_hint">手机号</string>
    <string name="et_login_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="tv_login_rem_psd">忘记密码</string>
    <string name="tv_login_reg_usr">立即注册</string>
    <string name="next">下一步</string>
    <string name="safe_check">安全验证</string>
    <string name="resend">重新发送</string>
    <string name="sms_code">短信验证码</string>
    <string name="reset_login_password">重置登录密码</string>
    <string name="register_an_account">账号注册</string>
    <string name="phone_number">手机号</string>
    <string name="lable">仅限中国大陆手机号</string>
    <string name="device">我的设备</string>
    <string name="butler">语音控制</string>
    <string name="picture">历史图片</string>
    <string name="deal">郁密度处理</string>
    <string name="setting">设置</string>
    <string name="add_advice">扫描二维码添加设备</string>
    <string name="gray">灰度化</string>
    <string name="binaryzation">二值化</string>
    <string name="take_photo">拍照选取</string>
    <string name="select_album">从相册选取</string>
    <string name="cancel">取消</string>
    <string name="set_new_psd">设置新密码</string>
    <string name="submit">提交</string>
    <string name="welfare">福利</string>
    <string name="gy">关于</string>
    <string name="his_data">历史数据</string>
    <string name="nname">昵称</string>
    <string name="head_portrait">头像</string>
    <string name="unbound">未绑定</string>
    <string name="logout">退出登录</string>
    <string name="perinfo">个人信息</string>
    <string name="email">邮箱</string>
    <string name="suggesstion">建议反馈</string>
    <string name="checkversion">检查更新</string>
    <string name="pi_name">设备名</string>
    <string name="pi_remark">备注</string>
    <string name="pi_threshold">阈值</string>
    <string name="pi_delaytime">拍照间隔</string>
    <string name="pi_switchstate">拍照运行状态</string>
    <string name="pi_bootstate">设备运行状态</string>
    <string name="pi_ipaddress">IP</string>
    <string name="device_inf">设备信息</string>
    <string name="look_pic">查看历史图片</string>
    <string name="make_sure">确认修改</string>
    <string name="delete">解绑该设备</string>
    <string name="no_permission">权限未授予,不能正常工作</string>
    <string name="no_select">未选择图片！</string>
    <string name="unbind">解绑失败</string>
    <string name="version">当前版本号:</string>
    <string name="get_data_success">获取数据成功了</string>
    <string name="binding_failed">绑定失败</string>
    <string name="confirmation_information">确认信息</string>
    <string name="binding">绑定</string>
    <string name="sure">确定</string>
    <string name="check_device_binding">请检查是否绑定过设备</string>
    <string name="note">注意</string>
    <string name="successfully_modified">修改成功</string>
    <string name="fail_modified">修改失败</string>
    <string name="check_content">请检查内容</string>
    <string name="valid_phone_number">请输入正确的手机号</string>
    <string name="successfully_authorized">授权成功</string>
    <string name="authorization_failed">授权失败</string>
    <string name="authorization_cancellation">授权取消</string>
    <string name="start_qq">请前往启动QQ</string>
    <string name="error">账号或密码错误</string>
    <string name="reg_success">注册成功</string>
    <string name="reg_fail">注册失败</string>
    <string name="length">密码不能为空，密码长度不足</string>
    <string name="update_per_nname">修改昵称</string>
    <string name="update_per_phone">绑定手机号码</string>
    <string name="update_per_email">绑定邮箱</string>
    <string name="enter_nname">请输入昵称</string>
    <string name="enter_phone">请输入手机号码</string>
    <string name="enter_email">请输入邮箱</string>
    <string name="get_fail">获取个人信息失败</string>
</resources>
