<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/select_camera"
        android:textColor="#fff"
        android:text="@string/take_photo"
        android:background="@drawable/button_white_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="3dp"
        android:id="@+id/select_album"
        android:textColor="#fff"
        android:text="@string/select_album"
        android:background="@drawable/button_white_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_cancel"
        android:textColor="#fff"
        android:text="@string/cancel"
        android:background="@drawable/button_white_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>